# summer-2025-practice

./: Financecalculator.py  README.md  finger_drills.py  main.py  pyproject.toml
cfa-level1-cli/: LICENSE  README.md  pyproject.toml
cfa-level1-cli/src/cfacalc/: bonds.py  cashflows.py  cli.py  currencies.py  derivatives.py  equities.py  portfolio.py  tvm.py  yield_curves.py
cfa-level1-cli/src/cfacalc/statistics/: descriptive.py  distributions.py  probability.py  regression.py  sampling.py
cfa-level1-cli/tests/: test_bonds.py  test_cashflows.py  test_currencies.py  test_derivatives.py  test_equities.py  test_portfolio.py  test_tvm.py  test_yield_curves.py
cfa-level1-cli/tests/statistics/: test_descriptive.py  test_distributions.py  test_hypothesis.py  test_probability.py  test_regression.py  test_sampling.py
